--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             
             <div class="solution-image">
-                <img src="images/solution_platform.png" alt="ExO.Works Platform">
+                <img src="images/solution_platform.jpg" alt="ExO.Works Platform">
             </div>
         </div>
     </section>
@@ -145,7 +145,7 @@
             </div>
             
             <div class="dashboard-preview">
-                <img src="images/dashboard.png" alt="ExO.Works Dashboard">
+                <img src="images/dashboard.jpg" alt="ExO.Works Dashboard">
             </div>
         </div>
     </section>
